--- a/layout/index.html
+++ b/layout/index.html
@@ -956,7 +956,7 @@
         </svg>
       </div>
       <div class="reviews-slider">
-        <div class="reviews-slider__slide">
+        <div class="reviews-slider__slide active_review_slide">
           <div class="reviews-slider__slide-img"><img src="./images/reviews/ava1.jpg" alt=""></div>
           <div class="reviews-slider__slide-date">05.02.2020</div>
           <div class="reviews-slider__slide-title">Анютка Дюгурова</div>
@@ -1434,7 +1434,7 @@
           <div class="nav-wrap nav-wrap-repair">
             <nav class="nav-popup nav-popup-repair-types transparancy-cut">
               <div class="nav-list nav-list-popup-repair">
-                <button class="button_o popup-repair-types-nav__item active">Потолок: Демонтажные работы</button>
+                <button class="button_o popup-repair-types-nav__item active_o">Потолок: Демонтажные работы</button>
                 <button class="button_o popup-repair-types-nav__item">Потолок: Монтажные работы</button>
                 <button class="button_o popup-repair-types-nav__item">Стены: Демонтажные работы</button>
                 <button class="button_o popup-repair-types-nav__item">Стены: Монтажные работы</button>
@@ -1847,8 +1847,9 @@
                 fill="#322823" fill-opacity=".5"></path>
             </svg>
           </div>
+
           <div class="popup-portfolio-slider">
-            <div class="popup-portfolio-slider__slide"><img src="./images/popup/1.jpg" alt=""></div>
+            <div class="popup-portfolio-slider__slide active_slide_portfolio"><img src="./images/popup/1.jpg" alt=""></div>
             <div class="popup-portfolio-slider__slide"><img src="./images/popup/2.jpg" alt=""></div>
             <div class="popup-portfolio-slider__slide"><img src="./images/popup/3.jpg" alt=""></div>
             <div class="popup-portfolio-slider__slide"><img src="./images/popup/4.jpg" alt=""></div>
@@ -1857,7 +1858,7 @@
             <div class="popup-portfolio-slider__slide"><img src="./images/popup/4.jpg" alt=""></div>
             <div class="popup-portfolio-slider__slide"><img src="./images/popup/3.jpg" alt=""></div>
             <div class="popup-portfolio-slider__slide"><img src="./images/popup/2.jpg" alt=""></div>
-            <div class="popup-portfolio-slider__slide"><img src="./images/popup/1.jpg" alt=""></div>
+            <div class="popup-portfolio-slider__slide"><img src="./images/popup/3.jpg" alt=""></div>
             <!-- /popup-portfolio-slide -->
           </div>
           <div class="slider-counter" id="popup-portfolio-counter">
@@ -1881,7 +1882,7 @@
             </svg>
           </div>
         </div>
-        <div class="popup-portfolio-text">
+        <div class="popup-portfolio-text active-portfolio-text">
           <div class="popup-portfolio-text-important">
             <div class="popup-portfolio-text-wrap">
               <div class="popup-portfolio-text__title">Площадь квартиры</div>
@@ -2252,7 +2253,7 @@
       </div>
       <div class="popup-transparency-slider-wrap">
         <div class="popup-transparency-slider">
-          <div class="popup-transparency-slider__slide"><img class="mobile-hide"
+          <div class="popup-transparency-slider__slide active_transparancy"><img class="mobile-hide"
               src="./images/popup/transparency-slide1.jpg" alt="">
             <img class="tablet-hide desktop-hide" src="./images/popup/mobile1.jpg" alt=""></div>
           <div class="popup-transparency-slider__slide"><img class="mobile-hide"
