--- a/layout/index.html
+++ b/layout/index.html
@@ -669,6 +669,7 @@
               fill="#322823"></path>
           </svg>
         </div>
+        <!-- style="transform: translate3d(-80px, 0px, 0px);" -->
           <div class="wrapper-port_slider">
             <div class="portfolio-slider mobile-hide">
               <div class="portfolio-slider__slide ">
@@ -1434,10 +1435,10 @@
           <div class="nav-wrap nav-wrap-repair">
             <nav class="nav-popup nav-popup-repair-types transparancy-cut">
               <div class="nav-list nav-list-popup-repair">
-                <button class="button_o popup-repair-types-nav__item active_o">Потолок: Демонтажные работы</button>
-                <button class="button_o popup-repair-types-nav__item">Потолок: Монтажные работы</button>
-                <button class="button_o popup-repair-types-nav__item">Стены: Демонтажные работы</button>
-                <button class="button_o popup-repair-types-nav__item">Стены: Монтажные работы</button>
+                <button data-type="dism_ceiling" class="button_o popup-repair-types-nav__item active_o">Потолок: Демонтажные работы</button>
+                <button data-type="install_ceiling" class="button_o popup-repair-types-nav__item">Потолок: Монтажные работы</button>
+                <button data-type="dism_wall" class="button_o popup-repair-types-nav__item">Стены: Демонтажные работы</button>
+                <button data-type="install_wall" class="button_o popup-repair-types-nav__item">Стены: Монтажные работы</button>
               </div>
             </nav><!-- /.repair-types__nav -->
             <div class="nav-arrow nav-arrow_left desktop-hide" id="nav-arrow-popup-repair_left">
@@ -1470,7 +1471,7 @@
               </thead>
             </table>
             <div class="popup-repair-types-content-table">
-              <table class="popup-repair-types-content-table__list">
+              <!-- <table class="popup-repair-types-content-table__list">
                 <tbody>
                   <tr class="mobile-row showHide">
                     <td class="repair-types-name">Очистка потолка от побелки, краски,водоэмульсионки</td>
@@ -1557,7 +1558,7 @@
                     <td class="repair-types-value">110 руб.</td>
                   </tr>
                 </tbody>
-              </table><!-- /popup-repair-types-tab-table-list -->
+              </table>
               <table class="popup-repair-types-content-table__list">
                 <tbody>
                   <tr class="mobile-row">
@@ -1645,7 +1646,7 @@
                     <td class="repair-types-value">110 руб.</td>
                   </tr>
                 </tbody>
-              </table><!-- /popup-repair-types-tab-table-list -->
+              </table>
               <table class="popup-repair-types-content-table__list">
                 <tbody>
                   <tr class="mobile-row">
@@ -1733,7 +1734,7 @@
                     <td class="repair-types-value">110 руб.</td>
                   </tr>
                 </tbody>
-              </table><!-- /popup-repair-types-tab-table-list -->
+              </table>
               <table class="popup-repair-types-content-table__list">
                 <tbody>
                   <tr class="mobile-row">
@@ -1821,7 +1822,7 @@
                     <td class="repair-types-value">110 руб.</td>
                   </tr>
                 </tbody>
-              </table><!-- /popup-repair-types-tab-table-list -->
+              </table> -->
             </div><!-- /popup-repair-types-tab-table -->
           </div>
         </div><!-- /popup-repair-types-tab -->
