--- a/layout/admin/table.html
+++ b/layout/admin/table.html
@@ -3,6 +3,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>Управление базой данных</title>
+	<script src="./table.js" defer></script>
 	<link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
@@ -23,7 +24,7 @@
 			<div class="table__wrapper">
 				<table id="table" class="table">
 					<thead>
-					<tr>
+					<tr class="sotr_zone">
 						<th class="table-th th-id">ID<span class="svg_ui"><svg class="icon-sort"><use xlink:href="./img/sprite.svg#sorting"></use></svg></span>
 						</th>
 						<th class="table-th th-type">Тип услуги<span class="svg_ui"><svg class="icon-sort"><use xlink:href="./img/sprite.svg#sorting"></use></svg></span>
@@ -37,139 +38,8 @@
 					</tr>
 					</thead>
 					<tbody id="tbody" class="tbody">
-					<tr class="table__row">
-						<td class="table__id table__cell">1614040106349</td>
-						<td class="table-type table__cell">Потолок: Демонтажные работы</td>
-						<td class="table-name table__cell">
-							Очистка потолка от побелки, краски, водоэмульсионки
-						</td>
-						<td class="table-units table__cell">
-							м2
-						</td>
-						<td class="table-cost table__cell">
-							130 руб
-						</td>
-						<td>
-							<div class="table__actions table__cell">
-								<button class="button action-change"><span class="svg_ui"><svg class="action-icon_change"><use xlink:href="./img/sprite.svg#change"></use></svg></span><span>Изменить</span>
-								</button>
-								<button class="button action-remove"><span class="svg_ui"><svg class="action-icon_remove"><use xlink:href="./img/sprite.svg#remove"></use></svg></span><span>Удалить</span>
-								</button>
-							</div>
-						</td>
-					</tr>
 
-					<tr class="table__row">
-						<td class="table__id table__cell">1614040106349</td>
-						<td class="table-type table__cell">Потолок: Монтажные работы</td>
-						<td class="table-name table__cell">
-							Монтаж потолка "Armstrong"
-						</td>
-						<td class="table-units table__cell">
-							м2
-						</td>
-						<td class="table-cost table__cell">
-							300 руб
-						</td>
-						<td>
-							<div class="table__actions table__cell">
-								<button class="button action-change"><span class="svg_ui"><svg class="action-icon_change"><use xlink:href="./img/sprite.svg#change"></use></svg></span><span>Изменить</span>
-								</button>
-								<button class="button action-remove"><span class="svg_ui"><svg class="action-icon_remove"><use xlink:href="./img/sprite.svg#remove"></use></svg></span><span>Удалить</span>
-								</button>
-							</div>
-						</td>
-					</tr>
-
-					<tr class="table__row">
-						<td class="table__id table__cell">1614040106349</td>
-						<td class="table-type table__cell">Стены: Монтажные работы</td>
-						<td class="table-name table__cell">
-							Устройство перегородки из ГКЛ
-						</td>
-						<td class="table-units table__cell">
-							м2
-						</td>
-						<td class="table-cost table__cell">
-							450 руб
-						</td>
-						<td>
-							<div class="table__actions table__cell">
-								<button class="button action-change"><span class="svg_ui"><svg class="action-icon_change"><use xlink:href="./img/sprite.svg#change"></use></svg></span><span>Изменить</span>
-								</button>
-								<button class="button action-remove"><span class="svg_ui"><svg class="action-icon_remove"><use xlink:href="./img/sprite.svg#remove"></use></svg></span><span>Удалить</span>
-								</button>
-							</div>
-						</td>
-					</tr>
-
-					<tr class="table__row">
-						<td class="table__id table__cell">1614040106349</td>
-						<td class="table-type table__cell">Стена: Демонтажные работы</td>
-						<td class="table-name table__cell">
-							Демонтаж стен (в кирпич)
-						</td>
-						<td class="table-units table__cell">
-							м2
-						</td>
-						<td class="table-cost table__cell">
-							600 руб
-						</td>
-						<td>
-							<div class="table__actions table__cell">
-								<button class="button action-change"><span class="svg_ui"><svg class="action-icon_change"><use xlink:href="./img/sprite.svg#change"></use></svg></span><span>Изменить</span>
-								</button>
-								<button class="button action-remove"><span class="svg_ui"><svg class="action-icon_remove"><use xlink:href="./img/sprite.svg#remove"></use></svg></span><span>Удалить</span>
-								</button>
-							</div>
-						</td>
-					</tr>
-
-					<tr class="table__row">
-						<td class="table__id table__cell">1614040106349</td>
-						<td class="table-type table__cell">Муж на час</td>
-						<td class="table-name table__cell">
-							Навес сушилки для белья
-						</td>
-						<td class="table-units table__cell">
-							шт
-						</td>
-						<td class="table-cost table__cell">
-							300 руб
-						</td>
-						<td>
-							<div class="table__actions table__cell">
-								<button class="button action-change"><span class="svg_ui"><svg class="action-icon_change"><use xlink:href="./img/sprite.svg#change"></use></svg></span><span>Изменить</span>
-								</button>
-								<button class="button action-remove"><span class="svg_ui"><svg class="action-icon_remove"><use xlink:href="./img/sprite.svg#remove"></use></svg></span><span>Удалить</span>
-								</button>
-							</div>
-						</td>
-					</tr>
-
-					<tr class="table__row">
-						<td class="table__id table__cell">1614040106349</td>
-						<td class="table-type table__cell">Электромонтажные работы</td>
-						<td class="table-name table__cell">
-							Демонтаж люстры
-						</td>
-						<td class="table-units table__cell">
-							шт
-						</td>
-						<td class="table-cost table__cell">
-							200 руб
-						</td>
-						<td>
-							<div class="table__actions table__cell">
-								<button class="button action-change"><span class="svg_ui"><svg class="action-icon_change"><use xlink:href="./img/sprite.svg#change"></use></svg></span><span>Изменить</span>
-								</button>
-								<button class="button action-remove"><span class="svg_ui"><svg class="action-icon_remove"><use xlink:href="./img/sprite.svg#remove"></use></svg></span><span>Удалить</span>
-								</button>
-							</div>
-						</td>
-					</tr>
-
-					</tbody>
+						</tbody>
 				</table>
 			</div>
 			<button class="button btn-addItem">
